--- a/cours-jeunes.html
+++ b/cours-jeunes.html
@@ -82,7 +82,48 @@
     <br>
     <h1> École de Tennis (de 3 à 10 ans) </h1>
     <hr>
+    <br> 
+    <br> 
     
+    <!-- div class="container text-center"> -->
+    <!-- <div class="row align-items-start">
+      <div class="row">
+        Baby Tennis <br>
+        3 et 4 ans(enfants scolarisés)
+        </tr>
+      </div>
+      <div class="row">
+        115 €/an 
+      </div>
+      <div class="row">
+        <ul> Parents bienvenus, 45 minutes par semaine (hors vacances scolaires) </ul>
+        <ul> Nés entre 2020 et 2021</ul>
+      </div>
+    </div>
+  </div> -->
+    <div id="table-table">
+        <table class="table table-bordered">
+            
+            <tbody>
+            <tr>
+                <td scope="row">Baby Tennis <br>3 et 4 ans(enfants scolarisés)</td>
+                <td>  </td>
+                <td></td>
+            </tr>
+            <tr>
+                <td scope="row">115 €/an</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td scope="row">Parents bienvenus, 45 minutes par semaine (hors vacances scolaires) <br>
+                Nés entre 2020 et 2021</td>
+                <td></td>
+                <td></td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
