--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="titcss/style.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <style>
+
+    </style>
     <title>Tennis Club de Torcy</title>
 
 
@@ -68,22 +71,32 @@
         </nav>
     </header>
     <main>
-        <!-- Carrousel -->
+        <!-- Carousel -->
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
-            <div class="carousel-inner" style="max-width: 100% ; height: 80vh;">
+            <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="css/img/tennis-club-entree-scaled.jpeg" class="d-block">
+                    <img src="css/img/tennis-club-entree-scaled.jpeg" class="d-block img-fluid h-50">
+
+                    <div class="carousel-caption">
+                        <h5 style="color: pink;">J'aime les pomme de terre</h5>
+                    </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="css/img/terrain-exterieur-droite-scaled.jpeg" class="d-block">
+                    <img src="css/img/terrain-exterieur-droite-scaled.jpeg" class="d-block img-fluid">
+                    <div class="carousel-caption">
+                        <h5 style="color: pink;">J'aime les pomme de terre</h5>
+                    </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="css/img/terrains-interieur-scaled.jpeg" class="d-block">
+                    <img src="css/img/terrains-interieur-scaled.jpeg" class="d-block img-fluid">
+                    <div class="carousel-caption">
+                        <h5 style="color: pink;">J'aime les pomme de terre</h5>
+                    </div>
                 </div>
             </div>
 
