--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             </button>
         </div><!-- carousel slide -->
 
-        <!-- Club Presentation -->
+        Club Presentation
         <center>
         <div>
             <h2>Lorem, ipsum dolor.</h2>
@@ -132,7 +132,7 @@
         <h2>Lorem, ipsum dolor.</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, dolorum eum maxime, eligendi blanditiis nobis, porro iusto tempore accusamus nesciunt distinctio atque quia quisquam minus nemo vel dolorem est. Tempore!</p>
         <!-- Our exeperts -->
-        <div class="row">
+        <!-- <div class="row">
             <h2>Our Experts</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique!</p>
             <div class="col">
@@ -146,8 +146,8 @@
             </div>
         </div>
     </main>
-    <br>
-    <footer>
+    <br> -->
+    <!-- <footer>
         <div class="row">
             <div class="col">
                 <p>Mail : tennisclubdetorcy@wanadoo.fr</p>
@@ -160,7 +160,7 @@
         </div>
         
 
-    </footer>
+    </footer> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script>
         // Redirecting towards the facebook page
